made links in blog pages open in another tab, added updated resume, add/edited hover/active css code for tap devices, tried to fix white bars on google chrome app on iphone but its really hard to fix

--- a/src/styles/base/base.css
+++ b/src/styles/base/base.css
@@ -4,14 +4,11 @@
   box-sizing: border-box;
 }
 
+:root,
 html,
 body {
-  background-color: var(--color-background-default);
+  background-color: var(--color-background-default) !important;
   color: var(--color-foreground-default);
-}
-
-body {
-  height: 100%;
 }
 
 body,
