--- a/src/styles/components/note.css
+++ b/src/styles/components/note.css
@@ -13,7 +13,13 @@
     font-size: inherit;
     color: inherit;
 
-    &:hover {
+    @media (hover: hover) {
+      &:hover {
+        color: var(--color-foreground-primary-hover);
+      }
+    }
+
+    &:active {
       color: var(--color-foreground-primary-hover);
     }
   }
@@ -38,7 +44,13 @@
   color: var(--color-foreground-danger);
   text-decoration-color: var(--color-foreground-danger);
 
-  &:hover {
+  @media (hover: hover) {
+    &:hover {
+      color: var(--color-foreground-danger-hover);
+    }
+  }
+
+  &:active {
     color: var(--color-foreground-danger-hover);
   }
 }
