--- a/src/styles/components/projects.css
+++ b/src/styles/components/projects.css
@@ -4,7 +4,22 @@
   flex-direction: column;
   text-decoration: none;
 
-  &:hover {
+  @media (hover: hover) {
+    &:hover {
+      color: inherit;
+
+      .project-card__header-suffix {
+        left: var(--spacing-4);
+        color: var(--color-foreground-primary);
+      }
+
+      .project-card__image {
+        filter: brightness(0.7);
+      }
+    }
+  }
+
+  &:active {
     color: inherit;
 
     .project-card__header-suffix {
